--- a/E-Commerce/Views/Home/_ProductCardAtHomePartial.cshtml
+++ b/E-Commerce/Views/Home/_ProductCardAtHomePartial.cshtml
@@ -9,7 +9,7 @@
                 <p class="card-title">@Model.Name</p>
                 <p class="card-price">@Model.Price $</p>
                 <div class="buttons">
-                    <a asp-action="AddProductToWishList" asp-route-ProductId="@Model.ProductId" class="btn btn-success">WishList</a>
+                    <a asp-action="AddProductToWishList" asp-route-ProductId="@Model.ProductId" asp-controller="Wishlist" class="btn btn-success">WishList</a>
                     <a asp-action="AddProductToCart" asp-route-ProductId="@Model.ProductId" class="btn btn-success">Cart</a>
                 </div>
             </div>  
