--- a/E-Commerce/wwwroot/css/site.css
+++ b/E-Commerce/wwwroot/css/site.css
@@ -7,15 +7,15 @@
 
 html, body {
     background-color: rgba(246, 245, 245, 1);
-    height: 100%; /* Ensures the body fills the viewport height */
-    display: flex; /* Makes the body a flex container */
-    flex-direction: column; /* Stacks children vertically */
-    /*scrollbar-gutter: stable;*/
+    height: 100%;  Ensures the body fills the viewport height 
+    display: flex;  Makes the body a flex container 
+    flex-direction: column;  Stacks children vertically 
+    scrollbar-gutter: stable;
     overflow-y: scroll;
 }
 
 .active-link {
-    color: white; /* Change this color as needed */
+    color: white;  Change this color as needed 
     font-weight: bold;
 }
 .Header {
@@ -61,7 +61,7 @@ html, body {
         }
 
 
-/* Content */
+
 .content {
     background-color: #fff;
     padding-top: 30px;
@@ -71,7 +71,7 @@ html, body {
     flex: 1;
     margin-top: 130px;
 }
-/* footer */
+
 .footer {
     margin-top: 30px;
     background-color: rgba(140, 51, 255, 1);
