Implemented CartController with validation - Added validation to check if the product exists. - Checked if the product is already in the cart. - Ensured the cart count does not exceed 5. - Implemented actions: GetUserCart, RemoveFromCart, ClearCart, AddToCart, UpdateQuantityOfCartItem, all with necessary validations.

--- a/E-Commerce/Views/Home/_ProductCardAtHomePartial.cshtml
+++ b/E-Commerce/Views/Home/_ProductCardAtHomePartial.cshtml
@@ -10,7 +10,7 @@
                 <p class="card-price">@Model.Price $</p>
                 <div class="buttons">
                     <a asp-action="AddProductToWishList" asp-route-ProductId="@Model.ProductId" asp-controller="Wishlist" class="btn btn-success">WishList</a>
-                    <a asp-action="AddProductToCart" asp-route-ProductId="@Model.ProductId" class="btn btn-success">Cart</a>
+                    <a asp-action="AddProductToCart" asp-controller="Cart" asp-route-ProductId="@Model.ProductId" class="btn btn-success">Cart</a>
                 </div>
             </div>  
         </div>
