--- a/E-Commerce/Views/Cart/getUserCart.cshtml
+++ b/E-Commerce/Views/Cart/getUserCart.cshtml
@@ -90,11 +90,13 @@
 <script>
     function UpdateProductCart(productId) {
         let quantity = document.getElementById(`quantaty-${productId}`).value;
-
         // Redirect to the UpdateCart action
         window.location.href = `/Cart/UpdateCart?ProductId=${productId}&quantaty=${quantity}`;
+
     }
 </script>
+
+
 
 <div class="container">
 	@if(Model.Count != 0)
@@ -122,10 +124,12 @@
 				
 				<div class="action">
 					<a asp-action="RemoveProductFromCart" asp-route-ProductId="@product.ProductId">Remove</a>
-                    <a onclick="UpdateProductCart(@product.ProductId)">Update</a>
+                    <a onclick="UpdateProductCart('@product.ProductId')">Update</a>
 				</div>
+
 			</div>
 		}
+
 	}
 	else
 	{
